@@ -1,3 +1,11 @@
+2006-04-26  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* C/baobab.xml:
+	* C/figures/baobab_treemaps.png:
+	* C/figures/baobab_window.png:
+	
+	More editing on help file
+
 2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* C/baobab.xml: editing help file
